# MediaSteamClient

./: CMakeLists.txt  config.json  main.cpp
Configration/: ConfigurationBuilder.h  FileReaderFactory.h  IConfigurationFacade.h  IReader.h  JsonFileReader.cpp  JsonFileReader.h
Configuration/: ConfigurationBuilder.h  FileReaderFactory.h  IConfigurationFacade.h  IReader.h  JsonFileReader.cpp  JsonFileReader.h
Encoder/: AACEncoder.cpp  AACEncoder.h  AudioEnCoder.h  AudioS16Resampler.cpp  AudioS16Resampler.h  H264Encoder.cpp  H264Encoder.h  IAudioEncoder.h  IVideoEncoder.h
Logger/: Logger.h
Message/: AudioMessage.h  VideoMessage.h
Middleware/: MsgQueue.h
Queue/: AudioMessage.h  MsgQueue.cpp  MsgQueue.h  VideoMessage.h
Source/: IReader.h  LocalCamera.cpp  LocalCamera.h  PCMFileReader.cpp  PCMFileReader.h  YUVFileReader.cpp  YUVFileReader.h
TransProtocol/: AVTagDataBuilder.h  IPusher.h  IRTMPProtocol.h  RTMPHolder.h  RTMPMessageFormatBuilder.h  RTMPPacketBuilder.h  RTMPProtocol.cpp  RTMPProtocol.h  RTMPPuller.cpp  RTMPPuller.h  RTMPPusher.cpp  RTMPPusher.h  RTSPPusher.cpp  RTSPPusher.h
Util/: TimeHelper.h  timeutil.h
